--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,9 @@
 {erl_opts, [debug_info]}.
-{deps, []}.
+{deps, [
+    {cowboy, "2.9.0"}
+]}.
+
+{relx, [{release, {evervote_server, "0.1.0"}}]}.
 
 {shell, [
   % {config, "config/sys.config"},
