first internal gen_server stubs

--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,7 @@
 {erl_opts, [debug_info]}.
 {deps, [
-    {cowboy, "2.9.0"}
+    {cowboy, "2.9.0"},
+    {katana, {git, "https://github.com/inaka/erlang-katana", {tag, "1.0.0"}}}
 ]}.
 
 {relx, [{release, {evervote_server, "0.1.0"}}]}.
