some types, specs and tests

--- a/rebar.config
+++ b/rebar.config
@@ -4,6 +4,10 @@
     {katana, {git, "https://github.com/inaka/erlang-katana", {tag, "1.0.0"}}}
 ]}.
 
+{project_plugins, [
+    rebar3_lint
+]}.
+
 {relx, [{release, {evervote_server, "0.1.0"}}]}.
 
 {shell, [
